[gd_scene load_steps=4 format=3 uid="uid://dpq7e852y4orc"]

[ext_resource type="Script" uid="uid://c72gwr4xlw0p3" path="res://gun.gd" id="1_dk5gl"]
[ext_resource type="Texture2D" uid="uid://cswb5do8rrj7q" path="res://pistol/pistol.png" id="1_vk1bi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dk5gl"]
radius = 602.359

[node name="Gun" type="Area2D"]
collision_mask = 2
script = ExtResource("1_dk5gl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 4)
shape = SubResource("CircleShape2D_dk5gl")

[node name="WeaponPivot" type="Marker2D" parent="."]
position = Vector2(-48, 1)

[node name="Pistol" type="Sprite2D" parent="WeaponPivot"]
position = Vector2(139, 0)
texture = ExtResource("1_vk1bi")

[node name="ShootingPoint" type="Marker2D" parent="WeaponPivot/Pistol"]
unique_name_in_owner = true
position = Vector2(26, -12)

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true
autostart = true

[node name="BurstTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="BurstTimer" to="." method="_on_burst_timer_timeout"]
